# RayTracing

./: CMakeLists.txt  ConvertToQImage.cpp  ConvertToQImage.h  KDTree.cpp  KDTree.h  LoadFromRt.cpp  LoadFromRt.h  LoadFromStl.cpp  LoadFromStl.h  Material.h  Primitives.cpp  Primitives.h  Readme.md  Render.cpp  Render.h  Scene.cpp  Scene.h  Vector.h  main.cpp
models/: caustest.rt  coloringtest.rt  pool.rt  quad.rt  simple.rt  spheres.rt  triangle.stl  utah_teapot.stl
